[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/e-Ukraine/e-Ukraine-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://DeletePopup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 25.0
content_margin_right = 25.0
content_margin_top = 25.0
content_margin_bottom = 25.0
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 17
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 15
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 15
use_filter = true
font_data = ExtResource( 1 )

[node name="DeletePopup" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.192157, 0.192157, 0.898039 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -75.5
margin_right = 201.5
margin_bottom = 75.5
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 378.0
margin_bottom = 126.0
custom_constants/separation = 25

[node name="Control" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 353.0
margin_bottom = 51.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Control"]
margin_right = 353.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Видалити замітку"
align = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/Control"]
margin_top = 29.0
margin_right = 353.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Ви дійсно хочете видалити замітку?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 353.0
margin_bottom = 101.0
custom_constants/separation = 74

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 139.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Відмінити"

[node name="DeleteButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 0.615686, 0.615686, 1 )
margin_left = 213.0
margin_right = 353.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Видалити"

[connection signal="visibility_changed" from="." to="." method="_on_DeletePopup_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
